[gd_scene load_steps=61 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/Bunny-Sheet_64x64.png" type="Texture" id=2]
[ext_resource path="res://player/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://player/Death.wav" type="AudioStream" id=4]
[ext_resource path="res://player/Dash_Particle.png" type="Texture" id=5]
[ext_resource path="res://player/circle.png" type="Texture" id=6]
[ext_resource path="res://player/Sword_Slash.wav" type="AudioStream" id=7]
<<<<<<< Updated upstream
[ext_resource path="res://player/Log File Pickup.wav" type="AudioStream" id=8]
=======
[ext_resource path="res://player/Dash Sound.wav" type="AudioStream" id=8]
>>>>>>> Stashed changes

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.51942
height = 1.18921

[sub_resource type="Animation" id=2]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 64 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15.4303, 4.77799 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_left_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 68 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.548, 11.5501 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_left_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.863, -16.3257 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.1453, 4.45449 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_right_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.2407, 15.6448 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_right_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.1856, -14.4358 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_end"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 40, 41 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 44, 45 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 36, 37 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}

[sub_resource type="Animation" id=12]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=13]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=14]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15.4303, 4.77799 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.548, 11.5501 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.863, -16.3257 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.1453, 4.45449 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.2407, 15.6448 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.1856, -14.4358 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack_left_down"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack_right_down"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "attack_left_up"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "attack_right_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 1, 1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 24 )
blend_point_4/pos = Vector2( -1, -1 )
blend_point_5/node = SubResource( 25 )
blend_point_5/pos = Vector2( 1, -1 )

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle_right_up"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
auto_triangles = false
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 1, 1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( -1, -1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 1, -1 )
blend_point_4/node = SubResource( 31 )
blend_point_4/pos = Vector2( -1, 0 )
blend_point_5/node = SubResource( 32 )
blend_point_5/pos = Vector2( 1, 0 )
triangles = PoolIntArray( 0, 1, 5, 0, 4, 5, 2, 3, 5, 2, 4, 5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "walk_left_down"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "walk_right_down"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "walk_right_up"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "walk_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=40]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( 1, 1 )
blend_point_4/node = SubResource( 38 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 39 )
blend_point_5/pos = Vector2( -1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=45]
states/attack/node = SubResource( 26 )
states/attack/position = Vector2( 499, 42 )
states/idle/node = SubResource( 33 )
states/idle/position = Vector2( 374, 126 )
states/walk/node = SubResource( 40 )
states/walk/position = Vector2( 573, 118 )
transitions = [ "idle", "walk", SubResource( 41 ), "walk", "idle", SubResource( 42 ), "idle", "attack", SubResource( 43 ), "attack", "idle", SubResource( 44 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=46]

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.243137, 0.619608, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=48]

[sub_resource type="CapsuleShape2D" id=49]
radius = 4.01384
height = 9.15234

[sub_resource type="CanvasItemMaterial" id=50]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=51]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0901961 )

[sub_resource type="CircleShape2D" id=52]
radius = 20.1201

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 0.891907, -9.21634 )
collision_layer = 2147483649
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.148651, 3.27032 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.148651 )
texture = ExtResource( 2 )
vframes = 18
hframes = 4
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_left = SubResource( 2 )
anims/attack_left_down = SubResource( 3 )
anims/attack_left_up = SubResource( 4 )
anims/attack_right = SubResource( 5 )
anims/attack_right_down = SubResource( 6 )
anims/attack_right_up = SubResource( 7 )
anims/idle_left = SubResource( 8 )
anims/idle_left_down = SubResource( 9 )
anims/idle_left_up = SubResource( 10 )
anims/idle_right = SubResource( 11 )
anims/idle_right_down = SubResource( 12 )
anims/idle_right_up = SubResource( 13 )
anims/walk_left = SubResource( 14 )
anims/walk_left_down = SubResource( 15 )
anims/walk_left_up = SubResource( 16 )
anims/walk_right = SubResource( 17 )
anims/walk_right_down = SubResource( 18 )
anims/walk_right_up = SubResource( 19 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 45 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 46 )
parameters/attack/blend_position = Vector2( -0.391576, 0.344828 )
parameters/idle/blend_position = Vector2( 0.951638, 0.594828 )
parameters/walk/blend_position = Vector2( -0.652106, -0.0775862 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -6.62164
margin_top = -14.1703
margin_right = 8.37837
margin_bottom = -11.1703
custom_styles/fg = SubResource( 47 )
custom_styles/bg = SubResource( 48 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 49 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
<<<<<<< Updated upstream
volume_db = -10.0
=======
volume_db = -26.363
pitch_scale = 4.0
>>>>>>> Stashed changes

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 50 )
position = Vector2( -0.118053, 1.75172 )
amount = 10
lifetime = 0.5
speed_scale = 2.0
local_coords = false
texture = ExtResource( 5 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 51 )
anim_speed = 1.0

[node name="AttackArea" type="Area2D" parent="." groups=[
"player_attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 11.1856, -14.4358 )
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 52 )

[node name="Sprite" type="Sprite" parent="AttackArea/CollisionShape2D"]
visible = false
self_modulate = Color( 1, 1, 1, 0.447059 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )

[node name="slash_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.5
pitch_scale = 1.11
<<<<<<< Updated upstream

[node name="dash_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
attenuation = 0.378929
=======
>>>>>>> Stashed changes

[node name="DashCooldown" type="Timer" parent="."]

[node name="dash_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
attenuation = 0.535887
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
